# DDS

./: LICENSE  README.md  README.mdd  dds_aliases_linux.sh  dds_environment_linux.sh  install_dependencies_ubuntu.sh  run_test_then_demo.sh  setup.sh  v1.0.0_alpha.sh  v1.0.0_alpha_run.sh  v1.0.0_alpha_setup.sh
IDL/: CoreData4.idl  Intelligence.idl  Messaging.idl
IDL/CoreData2_idl_generated/: CMakeLists.txt  CoreData2.hpp  CoreData2Application.cxx  CoreData2Application.hpp  CoreData2CdrAux.hpp  CoreData2CdrAux.ipp  CoreData2PubSubTypes.cxx  CoreData2PubSubTypes.hpp  CoreData2PublisherApp.cxx  CoreData2PublisherApp.cxx.idl_patcher_v9.backup  CoreData2PublisherApp.cxx.json_patcher_backup  CoreData2PublisherApp.hpp  CoreData2SubscriberApp.cxx  CoreData2SubscriberApp.hpp  CoreData2TypeObjectSupport.cxx  CoreData2TypeObjectSupport.hpp  CoreData2main.cxx
IDL/CoreData3_idl_generated/: CMakeLists.txt  CoreData3.hpp  CoreData3Application.cxx  CoreData3Application.hpp  CoreData3CdrAux.hpp  CoreData3CdrAux.ipp  CoreData3PubSubTypes.cxx  CoreData3PubSubTypes.hpp  CoreData3PublisherApp.cxx  CoreData3PublisherApp.cxx.idl_patcher_v9.backup  CoreData3PublisherApp.cxx.json_patcher_backup  CoreData3PublisherApp.hpp  CoreData3SubscriberApp.cxx  CoreData3SubscriberApp.hpp  CoreData3TypeObjectSupport.cxx  CoreData3TypeObjectSupport.hpp  CoreData3main.cxx
IDL/CoreData4_idl_generated/: CMakeLists.txt  CoreData4.hpp  CoreData4Application.cxx  CoreData4Application.hpp  CoreData4CdrAux.hpp  CoreData4CdrAux.ipp  CoreData4PubSubTypes.cxx  CoreData4PubSubTypes.hpp  CoreData4PublisherApp.cxx  CoreData4PublisherApp.cxx.idl_patcher_v9.backup  CoreData4PublisherApp.cxx.json_patcher_backup  CoreData4PublisherApp.hpp  CoreData4SubscriberApp.cxx  CoreData4SubscriberApp.hpp  CoreData4TypeObjectSupport.cxx  CoreData4TypeObjectSupport.hpp  CoreData4main.cxx
IDL/CoreData_idl_generated/: CMakeLists.txt  CoreData.hpp  CoreDataApplication.cxx  CoreDataApplication.hpp  CoreDataCdrAux.hpp  CoreDataCdrAux.ipp  CoreDataPubSubTypes.cxx  CoreDataPubSubTypes.hpp  CoreDataPublisherApp.cxx  CoreDataPublisherApp.cxx.idl_patcher_v9.backup  CoreDataPublisherApp.cxx.json_patcher_backup  CoreDataPublisherApp.hpp  CoreDataSubscriberApp.cxx  CoreDataSubscriberApp.hpp  CoreDataTypeObjectSupport.cxx  CoreDataTypeObjectSupport.hpp  CoreDatamain.cxx
IDL/Intelligence_idl_generated/: CMakeLists.txt  Intelligence.hpp  IntelligenceApplication.cxx  IntelligenceApplication.hpp  IntelligenceCdrAux.hpp  IntelligenceCdrAux.ipp  IntelligencePubSubTypes.cxx  IntelligencePubSubTypes.hpp  IntelligencePublisherApp.cxx  IntelligencePublisherApp.cxx.idl_patcher_v9.backup  IntelligencePublisherApp.cxx.json_patcher_backup  IntelligencePublisherApp.hpp  IntelligenceSubscriberApp.cxx  IntelligenceSubscriberApp.hpp  IntelligenceTypeObjectSupport.cxx  IntelligenceTypeObjectSupport.hpp  Intelligencemain.cxx
IDL/Messaging_idl_generated/: CMakeLists.txt  Messaging.hpp  MessagingApplication.cxx  MessagingApplication.hpp  MessagingCdrAux.hpp  MessagingCdrAux.ipp  MessagingPubSubTypes.cxx  MessagingPubSubTypes.hpp  MessagingPublisherApp.cxx  MessagingPublisherApp.cxx.idl_patcher_v9.backup  MessagingPublisherApp.cxx.json_patcher_backup  MessagingPublisherApp.hpp  MessagingSubscriberApp.cxx  MessagingSubscriberApp.hpp  MessagingTypeObjectSupport.cxx  MessagingTypeObjectSupport.hpp  Messagingmain.cxx
NOTICE/: NOTICE.md
demo/: demo.sh  package-lock.json  package.json  processes.pid  server.js
demo/build_demo/: build_demo.bat  build_demo.sh
demo/public/: app.js  index.html  (+1 more)
docs/: IDL.md  IDL.mdd  demo.md  demo.mdd  monitoring.md  monitoring.mdd  scenarios.md  scenarios.mdd  secure_dds.md  secure_dds.mdd
image/: README.md  build.sh  uninstall.sh
monitoring/: CMakeLists.txt  build.sh  monitor.cpp  monitor.sh
monitoring/build_monitoring/: build_monitoring.bat  build_monitoring.sh
monitoring/run_monitoring/: run_monitoring.bat  run_monitoring.sh
scenarios/: CoreData.json  CoreData2.json  CoreData3.json  CoreData4.json  Intelligence.json  Messaging.json
secure_dds/: appconf.cnf
(+132 files in other folders)
